--- a/app/src/main/res/layout/activity_discussion_request.xml
+++ b/app/src/main/res/layout/activity_discussion_request.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".controller.discussion.request.DiscussionRequestActivity">
 
@@ -14,6 +15,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/discussion_request_activity_toolbar"
         android:layout_width="match_parent"
+        app:title="Requests Discussion"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary" />
     </com.google.android.material.appbar.AppBarLayout>
