--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -38,17 +38,16 @@
             style="@style/Widget.MaterialComponents.FloatingActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            android:backgroundTint="@color/colorPrimary"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_add_light"
-            app:borderWidth="0dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            app:backgroundTint="@android:color/transparent"
             app:elevation="6dp"
-            app:fabSize="normal"
+            app:fabSize="mini"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:tint="#FFF" />
+            app:maxImageSize="45dp"
+            app:srcCompat="@drawable/plus"
+            app:tint="@null" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
