--- a/app/src/main/res/layout/activity_gallery_detail.xml
+++ b/app/src/main/res/layout/activity_gallery_detail.xml
@@ -15,6 +15,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/gallery_detail_activity_toolbar"
             android:layout_width="match_parent"
+            app:title="Picture"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/Anniversaire.PopupOverlay" />
