--- a/app/src/main/res/layout/activity_gallery_request.xml
+++ b/app/src/main/res/layout/activity_gallery_request.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".controller.gallery.request.GalleryRequestActivity">
 
@@ -15,6 +16,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/gallery_request_activity_toolbar"
             android:layout_width="match_parent"
+            app:title="Requests Gallery"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary" />
     </com.google.android.material.appbar.AppBarLayout>
