--- a/app/src/main/res/layout/disussion_request_cell.xml
+++ b/app/src/main/res/layout/disussion_request_cell.xml
@@ -17,7 +17,7 @@
         android:focusable="true"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         app:cardCornerRadius="10dp"
-        app:cardElevation="3dp">
+        app:cardElevation="2dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,7 +30,8 @@
                 android:layout_height="80dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="10dp"
-                app:cardCornerRadius="10dp">
+                app:cardCornerRadius="10dp"
+                app:cardElevation="0dp">
 
                 <ImageView
                     android:id="@+id/discussion_request_image"
@@ -56,35 +57,34 @@
                     android:ellipsize="end"
                     android:gravity="center_vertical"
                     android:maxLines="2"
-                    android:text="La familles des bois heureux voila c'est tout"
                     android:textSize="20sp" />
 
                 <LinearLayout
                     android:id="@+id/linearLayout"
-                    android:layout_alignParentEnd="true"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
                     <ImageButton
                         android:id="@+id/discussion_request_deny"
                         style="?android:attr/buttonBarButtonStyle"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:layout_marginStart="10dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/cross" />
+                        android:src="@drawable/error" />
 
                     <ImageButton
                         android:id="@+id/discussion_request_join"
                         style="?android:attr/buttonBarButtonStyle"
                         android:layout_width="50dp"
-                        android:layout_marginEnd="10dp"
                         android:layout_height="50dp"
                         android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/check" />
+                        android:src="@drawable/success" />
 
                 </LinearLayout>
             </RelativeLayout>
