--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -6,19 +6,31 @@
         android:id="@+id/toolbar_add"
         android:icon="@drawable/ic_add"
         android:title="@string/title_add"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom|collapseActionView" />
 
     <item
         android:id="@+id/toolbar_search"
         android:icon="@drawable/ic_search"
         android:title="@string/title_search"
-        app:showAsAction="ifRoom|collapseActionView"
-        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView" />
 
     <item
-        android:id="@+id/toolbar_requests"
-        android:icon="@drawable/ic_requests"
-        android:title="@string/title_request"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/toolbar_requests_gallery"
+
+        android:title="@string/title_request_gallery"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/toolbar_requests_discussion"
+        android:iconTint="@color/colorTextBlack"
+        android:title="@string/title_request_discussion"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/toolbar_logout"
+        android:iconTint="@color/colorTextBlack"
+        android:title="@string/logout"
+        app:showAsAction="never" />
 
 </menu>
