--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#9a000000</color>
     <color name="colorWhiteLightGrey">#F0F0F0</color>
+    <color name="colorWhiteLight">#FEFEFE</color>
+    <color name="colorGrey">#C0C0C0</color>
 </resources>
